--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,6 +2,7 @@
    https://tailwindcss.com/docs/configuration */
 
 @import "tailwindcss" source(none);
+@import "./static_pages.css";
 @source "../css";
 @source "../js";
 @source "../../lib/premiere_ecoute_web";
